cambio de url imagenes

--- a/src/app/features/detail/detail.component.html
+++ b/src/app/features/detail/detail.component.html
@@ -1,6 +1,6 @@
 <div class="detail-container">
     <header class="detail-header">
-        <img src="/img/logo2.png" alt="Detalle del payaso" class="header-img" />
+        <img src="./img/logo2.png" alt="Detalle del payaso" class="header-img" />
     </header>
 
     <div class="detail-content">
@@ -22,7 +22,7 @@
             </div>
 
             <div class="msg-container">
-                <img src="/img/alert_icon.png" alt="alert icon" class="icon-img" />
+                <img src="./img/alert_icon.png" alt="alert icon" class="icon-img" />
                 <h2 class="msg-text">{{ clown?.msg }}</h2>
 
                 <div class="stars">
