--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="header">
     <nav>
-        <a routerLink="/about" routerLinkActive="active">[about]</a>
-        <a routerLink="/" routerLinkActive="active">[clowns]</a>
-        <a routerLink="/rules" routerLinkActive="active">[rules]</a>        
-        <a routerLink="/" routerLinkActive="active">[links]</a>
-        <a routerLink="/" routerLinkActive="active">[...]</a>
+        <a routerLink="./about" routerLinkActive="active">[about]</a>
+        <a routerLink="./" routerLinkActive="active">[clowns]</a>
+        <a routerLink="./rules" routerLinkActive="active">[rules]</a>        
+        <a routerLink="./" routerLinkActive="active">[links]</a>
+        <a routerLink="./" routerLinkActive="active">[...]</a>
     </nav>
 </header>
