--- a/src/app/shared/components/main/main.component.scss
+++ b/src/app/shared/components/main/main.component.scss
@@ -3,7 +3,7 @@
 }
 
 .detail-background {
-    background-image: url('/img/detail_bg.png');
+    //background-image: url("/img/detail_bg.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
